--- a/notebooks/07-Control-Flow-Statements.ipynb
+++ b/notebooks/07-Control-Flow-Statements.ipynb
@@ -326,7 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Image('https://i.imgur.com/bF8SNro.png')"
+    "#from keras.preprocessing import image\n",
+    "#Image('https://i.imgur.com/bF8SNro.png')"
    ]
   },
   {
@@ -396,16 +397,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "total = 0\n",
-    "li = [0, 1, 1, 2, 3, 5, 7] \n",
-    "\n",
-    "for ele in li:\n",
-    "    total += ele\n",
-    "    print(f'    subtotal is {total}')\n",
-    "    \n",
-    "print(f'Grand total is {total}')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -507,19 +499,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "li = [ele for ele in range(40,23,-1)]\n",
-    "print(li)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "[{\"metadata\":{\"trusted\":true},\"cell_type\":\"code\",\"source\":\"for i in range(40,24,-4):\\n    print(i)\\n\",\"execution_count\":23,\"outputs\":[{\"output_type\":\"stream\",\"text\":\"40\\n36\\n32\\n28\\n\",\"name\":\"stdout\"}]}]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -700,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Image('https://i.kym-cdn.com/photos/images/original/001/352/701/64d.png')"
+    "#Image('https://i.kym-cdn.com/photos/images/original/001/352/701/64d.png')"
    ]
   },
   {
@@ -756,22 +743,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "numb = 1\n",
-    "while numb<=20:\n",
-    "    if numb % 3 ==0:\n",
-    "        if numb % 5:\n",
-    "            print('fizzbuzz')\n",
-    "        else: \n",
-    "            print('fizz')\n",
-    "    elif numb % 5 ==0:\n",
-    "        print('buzz')\n",
-    "    else:\n",
-    "        print(numb)\n",
-    "    \n",
-    "    numb = numb + 1    \n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1227,12 +1199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guests = ['Tiago', 'Jenny', 'Harry']\n",
-    "menu_choices = [3, 1, 5]\n",
-    "menu = ['Pancakes', 'Pasta', 'Pasty', 'Pie', 'Pizza']\n",
-    "\n",
-    "for guest,choice in zip(guests,menu_choices):\n",
-    "    print(f'{guest} is having {menu[choice-1]}')\n"
+    "\n"
    ]
   },
   {
