--- a/notebooks/Guided-practice-Day-1.ipynb
+++ b/notebooks/Guided-practice-Day-1.ipynb
@@ -547,7 +547,7 @@
    ],
    "source": [
     "Battles= {'Austerlitz':1805,'Alkmaar':1799,'Arhem':1813, 'Arcole':1796,'Jena':1806}\n",
-    "[name for name in Battles if  Battles. > 1800] "
+    "[name for name in Battles if  Battles[names] > 1800] "
    ]
   },
   {
