--- a/notebooks/02-Jupyter-Notebook.ipynb
+++ b/notebooks/02-Jupyter-Notebook.ipynb
@@ -66,17 +66,24 @@
    "source": [
     "## Notebook Cells\n",
     "\n",
-    "- An Notebook is a series of \"cells\".\n",
-    "- The active cell has an outline around it.\n",
+    "- A Notebook is a series of \"cells\".\n",
+    "- Select a cell by clicking to the left of it (click within the cell for edit mode: see below)\n",
+    "- The active cell has an outline around it. Note: if you click the blue line then it will shrink it (click again to expand).\n",
+    "- Run an active cell using `shift+Enter`\n",
     "- Navigate to different cells with the arrow keys.\n",
     "- A cell can be either be code, markdown, or \"raw\".\n",
-    "    - Code\n",
+    "    - Code:\n",
     "        - Python\n",
     "        - R\n",
     "        - Julia\n",
     "        - [Many Others](https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages)\n",
+    "    - Markdown:\n",
+    "        - Otherwise known as a header (see below)\n",
+    "    - Raw:\n",
+    "        - The cell remains as raw text, without any interpretation once run\n",
     "- Create cells from the Notebook menu or using keyboard shortcuts.\n",
-    "    - `a`: Insert cell"
+    "    - `a`: Insert cell above current cell\n",
+    "    - `b`: Insert new cell below current cell"
    ]
   },
   {
@@ -154,12 +161,14 @@
     "\n",
     "* `Ctrl`-`Enter`: Run Cell\n",
     "* `Shift`-`Enter`: Run cell, select cell below.\n",
-    "* `Alt`-`Enter`: Run Cell, insert below.\n",
+    "* `Alt`-`Enter`: Run Cell, and move to cell below.\n",
     "* `a` : Insert cell (above)\n",
     "* `b` : Insert cell (below)\n",
     "* `dd` : Delete cell (the same as VIM)\n",
     "* `Ctrl`-`s`: Save Notebook\n",
-    "* `i`: Interrupt kernel (press twice).\n",
+    "* `z` - undo last cell operation\n",
+    "   - (not to be confused with ctrl-z: undoes last typed command within the active cell)\n",
+    "* `i`: Interrupt kernel (press twice) -- (can also be done in kernel --> interrupt kernel).\n",
     "* `0`: Restart kernel (press twice)."
    ]
   },
@@ -679,9 +688,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2024] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2024-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -693,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.12.4"
   },
   "toc-autonumbering": false
  },
