added in a section that explains how to debug using the debug magic command

--- a/notebooks/02-Jupyter-Notebook.ipynb
+++ b/notebooks/02-Jupyter-Notebook.ipynb
@@ -157,7 +157,7 @@
     }
    },
    "source": [
-    "## Some shortcuts\n",
+    "## Some shortcuts (except in 'edit mode')\n",
     "\n",
     "* `Ctrl`-`Enter`: Run Cell\n",
     "* `Shift`-`Enter`: Run cell, select cell below.\n",
@@ -292,6 +292,16 @@
     "This can be avoided by running the whole notebook using the menu option:\n",
     "\n",
     "Kernel > \"Restart Kernel and Run All Cells\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now that we've added some more variables, let's have another look at the variable list, this time using a more comprehensive command\n",
+    "%whos"
    ]
   },
   {
@@ -566,6 +576,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Debugging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If some code doesn't work, it can be relatively easy to find the problem by looking at the variables and running individual lines of code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var1=4\n",
+    "var2=3\n",
+    "var3=var1*var2 - 12\n",
+    "sum_divide = var1/var3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if the operation takes place inside of a function, then it can be more difficult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function(var4,var5):\n",
+    "    var6=var4*var5 - 12\n",
+    "    sum_divide = var4/var6\n",
+    "    return sum_divide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = my_function(4,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the debug 'magic' command to inspect the variables in memory at the last place where the code failed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We cannot otherwise inspect the variables within the function \n",
+    "var4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Jupyterlab Launcher \n",
     "\n",
     "\"File > New\" or the \"+\" button on the File Browser, can start a new:\n",
@@ -644,9 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My calculation\n",
-    "\n",
-    "sdsdagfdh"
+    "## My calculation"
    ]
   },
   {
