--- a/notebooks/14-Matplotlib.ipynb
+++ b/notebooks/14-Matplotlib.ipynb
@@ -38,11 +38,64 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be efficient with **matplotlib**, you first need to understand its terminology."
+    "## Basic plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is easy to make simple look-see figures on the fly ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A basic line plot uses the command: `plt.plot(x,y)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[7,8,9]\n",
+    "y=[4,3,5]\n",
+    "plt.plot(x,y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# But if you provide just a one variable, it will assume simple x-indices (i.e. that start from 0)\n",
+    "plt.plot([4,3,5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A basic 2D color plot can use the command: `plt.pcolormesh(x,y,z)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=np.arange(0,10)\n",
+    "y=np.arange(50,60)\n",
+    "z=np.random.rand(10,10)\n",
+    "plt.pcolormesh(x,y,z)"
    ]
   },
   {
@@ -58,6 +111,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "... but to make nice plots requires the use of more features. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To be efficient with **matplotlib**, you first need to understand its terminology:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../figures/matplotlib_figure_parts.png\" style=\"height:90%; width:90%;\">"
    ]
   },
@@ -66,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figure, Axes, Axis"
+    "## Figure, Axes, Axis"
    ]
   },
   {
@@ -81,15 +149,6 @@
     "\n",
     "\n",
     "Calling one of the plotting functions, such as plot, will automatically create a figure with at least one axes and two axis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot([4,3,5])"
    ]
   },
   {
@@ -128,7 +187,8 @@
     "fig,axes = plt.subplots(nrows=2, ncols=3, figsize=(12,6))\n",
     "# This will create a figure and 6 axes arranged in 2 rows, 3 columns\n",
     "axes[0,0].plot([-4,-3,-5])\n",
-    "axes[1,2].plot([4,3,5])"
+    "axes[1,2].plot([4,3,5])\n",
+    "# you can look at the shape of axes using: axes.shape"
    ]
   },
   {
@@ -212,7 +272,7 @@
    "outputs": [],
    "source": [
     "# Plot data (with explicit plotting settings)\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(6,4))\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(7,5))\n",
     "axes.plot(X, Y1, color='C0', linewidth=1.5, linestyle='-',alpha=1, marker =\"\")\n",
     "axes.plot(X, Y2, color='C1', linewidth=1.5, linestyle='-',alpha=1, marker =\"\");"
    ]
@@ -244,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Youd code here"
+    "# Your code here"
    ]
   },
   {
@@ -385,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NB. Alternative ways to load/read text files will be covered in the pandas section later..."
+    "NB. Alternative ways to load/read text files will be covered in the pandas and xarray sections later..."
    ]
   },
   {
@@ -508,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scatter showing different area and color\n",
+    "# scatter showing different area and color (can use: s=size; c=colour)\n",
     "plt.scatter(x, y, s=area, c=colors);"
    ]
   },
@@ -1588,9 +1648,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2024] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2024-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1602,7 +1662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.12.4"
   },
   "nbpresent": {
    "slides": {
