some minor corrections to 02-Jupyter-Notebook.ipynb

--- a/notebooks/02-Jupyter-Notebook.ipynb
+++ b/notebooks/02-Jupyter-Notebook.ipynb
@@ -69,7 +69,7 @@
     "- A Notebook is a series of \"cells\".\n",
     "- Select a cell by clicking to the left of it (click within the cell for edit mode: see below)\n",
     "- The active cell has an outline around it. Note: if you click the blue line then it will shrink it (click again to expand).\n",
-    "- Run an active cell using `shift+Enter`\n",
+    "- Run a cell using `shift+Enter` (or 'Run --> Run Selected Cell' in the file menu bar)\n",
     "- Navigate to different cells with the arrow keys.\n",
     "- A cell can be either be code, markdown, or \"raw\".\n",
     "    - Code:\n",
@@ -157,19 +157,21 @@
     }
    },
    "source": [
-    "## Some shortcuts (except in 'edit mode')\n",
+    "## Some shortcuts \n",
     "\n",
-    "* `Ctrl`-`Enter`: Run Cell\n",
-    "* `Shift`-`Enter`: Run cell, select cell below.\n",
-    "* `Alt`-`Enter`: Run Cell, and move to cell below.\n",
-    "* `a` : Insert cell (above)\n",
-    "* `b` : Insert cell (below)\n",
-    "* `dd` : Delete cell (the same as VIM)\n",
+    "* `Ctrl`-`Enter`: Run Cell \n",
+    "* `Shift`-`Enter`: Run cell, select cell below\n",
+    "* `Alt`-`Enter`: Run Cell, insert new cell below\n",
+    "\n",
+    "While not in 'edit mode':\n",
+    "* `a` : Insert cell (above active cell)\n",
+    "* `b` : Insert cell (below active cell)\n",
+    "* `dd` : Delete active cell (the same as VIM)\n",
     "* `Ctrl`-`s`: Save Notebook\n",
     "* `z` - undo last cell operation\n",
     "   - (not to be confused with ctrl-z: undoes last typed command within the active cell)\n",
-    "* `i`: Interrupt kernel (press twice) -- (can also be done in kernel --> interrupt kernel).\n",
-    "* `0`: Restart kernel (press twice)."
+    "* `i`: Interrupt kernel (press twice; can also be done in kernel --> interrupt Kernel in file menu bar).\n",
+    "* `0`: Restart kernel (press twice; can also be done in kernel --> Restart Kernel in file menu bar)."
    ]
   },
   {
@@ -178,9 +180,9 @@
    "source": [
     "## 1 notebook 1 kernel\n",
     "\n",
-    "Each notebook has a program, called kernel, that stores the initialised variables in memory.\n",
+    "Each notebook has a program, called the kernel, that stores the initialised variables in memory.\n",
     "\n",
-    "The kernel can be restarted, without affecting the contents of the notebook. \n"
+    "The kernel is the engine that runs and manages the code, and can be stopped/restarted without affecting the contents of the notebook. \n"
    ]
   },
   {
