--- a/notebooks/13-Numpy-Intro.ipynb
+++ b/notebooks/13-Numpy-Intro.ipynb
@@ -11,8 +11,11 @@
     }
    },
    "source": [
-    "# ![](http://www.numpy.org/_static/numpy_logo.png) Introduction to NumPy\n",
-    "##### NumPy supports arrays which are very useful to numerical computations\n",
+    "\n",
+    "\n",
+    "\n",
+    "# <a href=\"https://numpy.org/\"> <img src=\"https://numpy.org/images/logo.svg\" alt=\"Numpy logo\" width=100></a> Introduction to NumPy\n",
+    "##### NumPy supports **arrays** which are very useful to numerical computations\n",
     "* Arrays are N dimensional: 1d (vector), 2d (plane),...,N dim\n",
     "* Many packages use numpy arrays to store data\n",
     "\n",
@@ -2294,7 +2297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.6"
   },
   "nbpresent": {
    "slides": {
