--- a/notebooks/Welcome.ipynb
+++ b/notebooks/Welcome.ipynb
@@ -26,7 +26,7 @@
     "<https://www.cefas.co.uk/>\n",
     "\n",
     "\n",
-    "## Your teachers for this course:\n",
+    "## Your teachers and organisers for this course:\n",
     "                \n",
     "    Alice Hsu - UEA-ENV\n",
     "    Claire Beraud - Cefas\n",
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
