--- a/notebooks/17-Pandas-Intro.ipynb
+++ b/notebooks/17-Pandas-Intro.ipynb
@@ -404,7 +404,7 @@
    "metadata": {},
    "source": [
     "The Time column  looks fine, but looking inot the datatypes, we can see that Time is an \"object\" which in pandas its means that it did not manage to convert to datetime object.\n",
-    "This is due to due to incorrect 24:00:00 times in the file."
+    "This is due to incorrect 24:00:00 times in the file."
    ]
   },
   {
@@ -432,16 +432,15 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "\n",
-    "def dateparse(date_str, time_str):\n",
+    "def dateparse(datetime_str):\n",
+    "    date_str, time_str = datetime_str.split()\n",
     "    if time_str == '24:00:00':\n",
     "        time_str = '00:00:00'\n",
-    "        date = pd.datetime.strptime(date_str + time_str, '%Y-%m-%d%H:%M:%S')\n",
+    "        date = datetime.datetime.strptime(date_str + ' ' + time_str, '%Y-%m-%d %H:%M:%S')\n",
     "        date = date + datetime.timedelta(days=1)\n",
     "    else:\n",
-    "        date = pd.datetime.strptime(date_str + time_str, '%Y-%m-%d%H:%M:%S')\n",
-    "    return date \n",
-    "    #pd.datetime.strptime(date_str + time_str, '%Y-%m-%d%H:%M:%S')"
+    "        date = datetime.datetime.strptime(date_str + ' ' + time_str, '%Y-%m-%d %H:%M:%S')\n",
+    "    return date"
    ]
   },
   {
@@ -451,7 +450,7 @@
    "outputs": [],
    "source": [
     "air_quality = pd.read_csv(fname, header=4, skipfooter=4, na_values='No data', engine='python',\n",
-    "              parse_dates={'Time': [0, 1]}, date_parser=dateparse) \n",
+    "                          parse_dates={'Time': [0, 1]}, date_parser=dateparse)\n",
     "print(air_quality.dtypes)\n",
     "air_quality.head(4)"
    ]
@@ -494,8 +493,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "air_quality.drop('Co', 1, inplace=True)\n",
-    "air_quality.drop('Co_status', 1)\n",
+    "air_quality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality.drop('Co', axis=1, inplace=True)\n",
+    "air_quality.drop('Co_status', axis=1)\n",
     "air_quality.head(4)"
    ]
   },
@@ -555,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, (ax0, ax1) = plt.subplots(ncols=2)\n",
@@ -752,14 +758,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "air_quality.corr()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you want to visualise this correlation matrix, uncomment the following code cell."
+    "# First remove any non-numeric columns\n",
+    "air_quality.drop(['CO_status','PM10_status','O3_status','NOx_status'], axis=1, inplace=True)"
    ]
   },
   {
@@ -768,13 +768,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots()\n",
-    "# p = ax.imshow(air_quality.corr(), interpolation=\"nearest\", cmap='RdBu_r', vmin=-1, vmax=1)\n",
-    "# ax.set_xticks(np.arange(len(air_quality.corr().columns)))\n",
-    "# ax.set_yticks(np.arange(len(air_quality.corr().index)))\n",
-    "# ax.set_xticklabels(air_quality.corr().columns)\n",
-    "# ax.set_yticklabels(air_quality.corr().index)\n",
-    "# fig.colorbar(p)"
+    "air_quality.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can visualise this correlation matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "p = ax.imshow(air_quality.corr(), interpolation=\"nearest\", cmap='RdBu_r', vmin=-1, vmax=1)\n",
+    "ax.set_xticks(np.arange(len(air_quality.corr().columns)))\n",
+    "ax.set_yticks(np.arange(len(air_quality.corr().index)))\n",
+    "ax.set_xticklabels(air_quality.corr().columns)\n",
+    "ax.set_yticklabels(air_quality.corr().index)\n",
+    "fig.colorbar(p)"
    ]
   },
   {
@@ -811,7 +827,7 @@
    "outputs": [],
    "source": [
     "soi_df = pd.read_csv('../data/soi.csv', skiprows=1, parse_dates=[0], index_col=0, na_values=-999.9,\n",
-    "                     date_parser=lambda x: pd.datetime.strptime(x, '%Y%m'))"
+    "                     date_parser=lambda x: pd.to_datetime(x, format='%Y%m'))"
    ]
   },
   {
@@ -821,7 +837,7 @@
    "outputs": [],
    "source": [
     "olr_df = pd.read_csv('../data/olr.csv', skiprows=1, parse_dates=[0], index_col=0, na_values=-999.9,\n",
-    "                     date_parser=lambda x: pd.datetime.strptime(x, '%Y%m'))"
+    "                     date_parser=lambda x: pd.to_datetime(x, format='%Y%m'))"
    ]
   },
   {
@@ -888,7 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.dates as mdates"
+    "import matplotlib.dates as mdates"
    ]
   },
   {
@@ -904,7 +920,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mdt = mdates.date2num(df.index)"
+    "mdt = mdates.date2num(df.index)"
    ]
   },
   {
@@ -920,7 +936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['mpl_date'] = mdt"
+    "df['mpl_date'] = mdt"
    ]
   },
   {
@@ -936,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = df.plot(kind='scatter', x='OLR', y='SOI', c='',\n",
+    "ax = df.plot(kind='scatter', x='OLR', y='SOI',\n",
     "             colormap='viridis', colorbar=False, edgecolors='none')\n",
     "\n",
     "plt.colorbar(ax.collections[0], ticks=mdates.YearLocator(5), \n",
@@ -1108,8 +1124,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df1 = df.copy()\n",
-    "df1.columns = [\"OLR2\", \"SOI2\"]\n",
+    "df1.columns = [\"OLR2\", \"SOI2\",\"mpl_date2\"]\n",
     "\n",
     "pd.merge(left=df, right=df1, on=\"Date\")"
    ]
@@ -1162,9 +1187,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:course2024] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2024-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1176,7 +1201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
