--- a/notebooks/07-Control-Flow-Statements.ipynb
+++ b/notebooks/07-Control-Flow-Statements.ipynb
@@ -48,17 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Everybody is happy, just carry on!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hands=0\n",
     "\n",
@@ -1505,82 +1497,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Exercise 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    try:\n",
-    "        filename = input(\"Please enter a filename: \")\n",
-    "        if len(filename)<6:\n",
-    "            print('Filenames have at least 6 characters, please try again...')\n",
-    "            continue\n",
-    "        else:\n",
-    "            open(filename)\n",
-    "            # Read data here ...\n",
-    "            break\n",
-    "    \n",
-    "    except OSError as err:\n",
-    "        print(err)\n",
-    "        print('\\n WARNING: Cannot read file so will use default values')\n",
-    "        # Do alternate action here ...\n",
-    "        break\n",
-    "\n",
-    "    except: \n",
-    "        print('Unexpected error:')\n",
-    "        raise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Extension***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    try:\n",
-    "        filename = input(\"Please enter a filename: \")\n",
-    "        if len(filename)<6:\n",
-    "            print('Filenames have at least 6 characters, please try again...')\n",
-    "            continue\n",
-    "\n",
-    "        # === Added: ===\n",
-    "        elif ' ' in filename:\n",
-    "            print('Filenames cannot contain spaces, please try again...')\n",
-    "            continue\n",
-    "            \n",
-    "        else:\n",
-    "            open(filename)\n",
-    "            # Read data here ...\n",
-    "            break\n",
-    "    \n",
-    "    except OSError as err:\n",
-    "        print(err)\n",
-    "        print('\\n WARNING: Cannot read file so will use default values')\n",
-    "        # Do alternate action here ...\n",
-    "        break\n",
-    "\n",
-    "    except: \n",
-    "        print('Unexpected error:')\n",
-    "        raise"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1612,9 +1528,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1626,7 +1542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
