--- a/notebooks/Guided-practice-Day-2.ipynb
+++ b/notebooks/Guided-practice-Day-2.ipynb
@@ -9,35 +9,11 @@
     "\n",
     "Request the user to type in a number and print out the square root to 3 decimal places\n",
     "\n",
-    "i.e.\n",
+    "e.g.,\n",
     "\n",
-    "    Square root: 3.141\n",
+    "    Square root of 10 = 3.141\n",
     "\n",
-    "Keep requesting jumbers until interrupted."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 2 - Validate input\n",
-    "\n",
-    "\n",
-    "Extend the previous exercise so that if the input is not a float, print error message.\n",
-    "\n",
-    "To find out the type of error raised by an incorrect input, you can execute\n",
-    "\n",
-    "    float(<incorrect_input>)"
+    "Keep requesting numbers until the kernel is interrupted (or no input provided)."
    ]
   },
   {
@@ -47,7 +23,7 @@
    "outputs": [],
    "source": [
     "# your code\n",
-    "# Remember the construct try, except, else, finally\n"
+    "\n"
    ]
   },
   {
@@ -55,17 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3 - Calculate average for sequence of observations\n",
+    "## Exercise 2 - Check input\n",
     "\n",
-    "- Simulate a sequences of maxn measurements using a pseudo number generator\n",
-    "\n",
-    "    ```random.normalvariate(mu, sigma)```\n",
-    "\n",
-    "- Print the observation, and for a number of samples above ```minsamples``` print the estimated average.\n",
-    "\n",
-    "- You can calculate the average up to sample n from the observations and the average for n-1:\n",
-    "    \n",
-    "    $Avg_n = \\frac{ Avg_{n-1} \\times (n-1)+ obs_n  }{n}$"
+    "Modify your answer to the previous exercise so that you only consider positive numbers to be valid input, prompting for new input if the input is negative. "
    ]
   },
   {
@@ -74,17 +42,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random \n",
+    "# your code\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Exercise 3 - Calculate the square root of 100 numbers\n",
     "\n",
-    "# your code\n"
+    "- Calculate the square root of each number between 0 and 100, without prompting for user input. \n",
+    " \n",
+    "- Save your answer to a new list, `squareroots`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code\n",
+    "# Hint: Refer to 06-Built-in-Data-Structures.ipynb for a reminder on how to concatenate lists?\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
