--- a/notebooks/solutions/Guided-practice-Day-2-Solutions.ipynb
+++ b/notebooks/solutions/Guided-practice-Day-2-Solutions.ipynb
@@ -9,15 +9,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57002801-7414-47da-9714-f8ec1f26b009",
+   "metadata": {},
+   "source": [
+    "Request the user to type in a number and print out the square root to 3 decimal places\n",
+    "\n",
+    "e.g.,\n",
+    "\n",
+    "    Square root of 10 = 3.141\n",
+    "\n",
+    "Keep requesting numbers until the kernel is interrupted (or no input provided)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8842105-6c6c-437d-abe1-048e917d8684",
+   "id": "90c2bfaf-13a2-4d7f-913e-5d290111765a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# your code\n",
+    "\n",
     "while True:\n",
-    "    parameter = float( input() )**0.5\n",
-    "    print( f\"Square root: {parameter:.3}\" )\n"
+    "    print('Please provide a number: ')\n",
+    "    parameter = input() \n",
+    "    squareroot = float( parameter )**0.5\n",
+    "    print( f\"Square root of {parameter} = {squareroot:.3}\" )"
    ]
   },
   {
@@ -36,8 +54,14 @@
     "<br>\n",
     "<br>\n",
     "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
-    "## Solution to exercise 2 - Validate input"
+    "## Solution to Exercise 2 - Validate input\n",
+    "\n",
+    "Modify your answer to the previous exercise so that you only consider positive numbers to be valid input, prompting for new input if the input is negative. \n"
    ]
   },
   {
@@ -47,38 +71,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# your code\n",
+    "\n",
     "while True:\n",
-    "    try:\n",
-    "        parameter = float( input() )**0.5\n",
-    "    except ValueError:\n",
-    "        print('ERROR: Input must be a number.')\n",
-    "    else:\n",
-    "        print( f'Square root: {parameter:.3}' )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "827c45cb-6aff-4713-a83f-ca55c203c5d5",
-   "metadata": {},
-   "source": [
-    "To interrupt the program and give a meaningful error message, use raise Exception()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "342f53d4-4050-45d6-9d31-b119afb57512",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    uin = input()\n",
-    "    try:\n",
-    "        parameter = float( uin )**0.5\n",
-    "    except ValueError:\n",
-    "        raise Exception('ERROR: Input must be an integer')\n",
-    "    else:   \n",
-    "        print(f'parameter: {parameter:.3f}')"
+    "    print('Please provide a positive number: ')\n",
+    "    parameter = input() \n",
+    "    if float(parameter) >= 0:\n",
+    "        squareroot = float( parameter )**0.5\n",
+    "        print( f\"Square root of {parameter} = {squareroot:.3}\" )\n",
+    "    else: \n",
+    "        print('That number is not positive! Try again...')\n"
    ]
   },
   {
@@ -98,47 +100,44 @@
     "<br>\n",
     "<br>\n",
     "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
-    "## Solution to exercise 3 - Calculate average for sequence of observations"
+    "## Solution to Exercise 3 - Calculate the square root of 100 numbers\n",
+    "\n",
+    "- Calculate the square root of each number between 0 and 100, without prompting for user input. \n",
+    " \n",
+    "- Save the answer to a new list, `squareroots`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "597b27bc-3553-4595-83f6-5051ae708790",
+   "id": "702f5d57-f6d1-4658-89c1-0728ed973dcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random \n",
-    "\n",
     "# your code\n",
-    "mu = 2.0\n",
-    "sigma = 0.3\n",
-    "minsamples = 20  # only calc average for more than minsamples\n",
-    "maxn = 100       # number of observations\n",
+    "# Hint: Refer to 06-Built-in-Data-Structures.ipynb for a reminder on how to concatenate lists?\n",
     "\n",
+    "squareroots = []\n",
     "\n",
-    "print(f'obs\\tmean') # print column names\n",
-    "for n in range(1, maxn+1):\n",
-    "    obs = random.normalvariate(mu, sigma)\n",
-    "    if n==1:\n",
-    "        avgn = obs\n",
-    "    else:\n",
-    "        avgn = (avgnm1 * (n-1) + obs) / n\n",
-    "    avgnm1=avgn\n",
-    "    \n",
-    "    if n <= minsamples:\n",
-    "        print( f'{obs:.4f}\\t---' )\n",
-    "    else:\n",
-    "        print( f'{obs:.4f}\\t{avgn:.4f}' )\n",
+    "for n in range(100): \n",
+    "    squareroot = n**0.5\n",
+    "    squareroots = squareroots + [squareroot]\n",
     "\n",
-    "        "
+    "print(squareroots)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78430ff-65a5-410c-bf42-37157489fabf",
+   "id": "b6a6ad4e-41f7-40be-bc76-cde4646e2e47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,9 +145,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -160,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
